Update find command parser to pass testcases